--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,8 @@ nav ul li a:hover {
 .banner-text {
   flex: 1;
   min-width: 300px;
+  padding: 15px 170px;
+  margin-top: 20px;
 }
 
 .banner-text h1 {
@@ -431,6 +433,9 @@ nav ul li a:hover {
   }
   .feature-content {
     min-width: 240px;
+  }
+  .banner-text {
+    padding: 0 10px;
   }
 }
 
