--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,7 @@ nav ul li a:hover {
   }
   .features-gallery {
   grid-template-columns: repeat(1, 1fr);
+  display: contents;
   }
   .features-content {
     min-width: 240px;
